RESOLVED FIXED 251784
[GStreamer][EME] video track configuration not updated when dealing with cenc caps
https://bugs.webkit.org/show_bug.cgi?id=251784
Summary [GStreamer][EME] video track configuration not updated when dealing with cenc...
Philippe Normand
Reported 2023-02-06 01:54:55 PST
ssia
Attachments
Philippe Normand
Comment 1 2023-02-06 01:57:07 PST
EWS
Comment 2 2023-02-07 00:58:34 PST
Committed 259948@main (0bf0c5ed4b63): <https://commits.webkit.org/259948@main> Reviewed commits have been landed. Closing PR #9679 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-02-07 00:59:18 PST
Note You need to log in before you can comment on or make changes to this bug.