[GStreamer][EME] video track configuration not updated when dealing with cenc caps https://bugs.webkit.org/show_bug.cgi?id=251784

Reviewed by Xabier Rodriguez-Calvar.

With encrypted caps `gst_video_info_from_caps()` would fail, so we fallback to our custom utilities
in this case.

* Source/WebCore/platform/graphics/gstreamer/VideoTrackPrivateGStreamer.cpp:
(WebCore::VideoTrackPrivateGStreamer::updateConfigurationFromCaps):

Canonical link: https://commits.webkit.org/259948@main